--- a/src/scss/_layer.scss
+++ b/src/scss/_layer.scss
@@ -59,7 +59,7 @@ html.is-open, html.is-open body {
 		border-radius: $border-radius-20;
         .layer-header {
             max-height: 66px;
-            padding: 14px 20px 12px;
+            padding: 24px 20px 0;
             font-size: 18px;
             font-weight: bold;
 
@@ -70,10 +70,10 @@ html.is-open, html.is-open body {
             }
         }
         .layer-body {
-            padding:24px 20px;
+            padding:16px 20px;
         }
         .layer-footer {
-            padding: 20px 20px 30px;
+            padding: 8px 20px 16px;
 
 			&.bot-reset{
 				padding-bottom:0;
@@ -108,6 +108,7 @@ html.is-open, html.is-open body {
 			border-top-right-radius:20px;
 			.layer-header{
 				flex:0 0 auto;
+				min-height:56px;
 			}
 			.layer-body{
 				flex:1 1 auto;
@@ -134,6 +135,21 @@ html.is-open, html.is-open body {
 				text-indent:-30px;
 				@include ell();
 			}
+		}
+		.layer-body{
+			padding:24px 20px 24px;
+		}
+		.layer-footer{
+			padding:0 20px 24px;
+			&.full{
+				padding:0 !important;
+			}
+		}
+		.layer-body + .layer-footer{
+			padding:0 20px 24px;
+		}
+		.layer-header + .layer-footer{
+			padding:24px 20px 24px;
 		}
         &:before {
             opacity: 0;
@@ -207,6 +223,12 @@ html.is-open, html.is-open body {
 				}
 			}
 
+		}
+		.layer-body{
+			padding:32px 20px 24px;
+		}
+		.layer-footer{
+			padding:0 20px 24px;
 		}
         &:before {
 			opacity: 0;
