--- a/src/scss/_benefit.scss
+++ b/src/scss/_benefit.scss
@@ -18,11 +18,10 @@
             h3 {
                 margin-left: 8px;
                 color: $navy-040;
-                @include fontSize(16,500);
+                @include fontSize(16, 500);
             }
         }
         .right {
-            margin-left: auto;
             .btn {
                 border-radius: 2rem;
                 height: 24px;
@@ -74,7 +73,7 @@
                 justify-content: space-between;
                 margin-left: 10px;
                 .tit-txt {
-                    @include fontSize(18,700);
+                    @include fontSize(18, 700);
                 }
                 .effective-date {
                     .date {
@@ -98,7 +97,7 @@
                         width: 100%;
                         height: 100%;
                         color: $gray-000;
-                        @include fontSize(14,500);
+                        @include fontSize(14, 500);
                         border-radius: $border-radius;
                         border: 1px solid #989b9d;
                         background-color: rgba($color: $black, $alpha: 0.8);
@@ -144,12 +143,12 @@
                 span {
                     &:nth-child(1) {
                         color: $navy-070;
-                        @include fontSize(18,700);
+                        @include fontSize(18, 700);
                     }
                     &:nth-child(2) {
                         margin-left: 4px;
                         color: $green-040;
-                        @include fontSize(12,500);
+                        @include fontSize(12, 500);
                     }
                 }
             }
@@ -193,14 +192,13 @@
         }
         &.type-2 {
             .coupon-item {
-            display: block;
-            .effective-date + .btn{
-                position: absolute;
-                right: 24px;
-                top: calc(50% - 12px);
+                display: block;
+                .effective-date + .btn {
+                    position: absolute;
+                    right: 24px;
+                    top: calc(50% - 12px);
+                }
             }
-            }
-            
         }
     }
     .event-detail {
@@ -228,7 +226,7 @@
         .comment {
             .comment-head {
                 margin-bottom: 10px;
-                @include fontSize(12,700);
+                @include fontSize(12, 700);
                 .count {
                     color: $green-060;
                 }
@@ -277,14 +275,11 @@
         .left {
             h3 {
                 color: $navy-040;
-                @include fontSize(16,500);
+                @include fontSize(16, 500);
             }
             * + * {
                 margin-left: 4px;
             }
-        }
-        .right {
-            margin-left: auto;
         }
         .btn-link {
             @include fontSize(14);
@@ -310,11 +305,8 @@
     padding: 10px 0;
     margin-bottom: 10px;
     border-bottom: 1px solid $gray-020;
-    .right {
-        margin-left: auto;
-    }
     .left {
-        @include fontSize(12,500);
+        @include fontSize(12, 500);
         .date {
             color: $navy-040;
             margin-left: 20px;
@@ -324,7 +316,7 @@
 .comment-text {
     padding-bottom: 20px;
     color: $navy-070;
-    @include fontSize(14,500);
+    @include fontSize(14, 500);
 }
 
 // 임시
@@ -370,7 +362,7 @@
         }
         .text {
             margin-left: 10px;
-            @include fontSize(18,700);
+            @include fontSize(18, 700);
         }
         .btn {
             margin-left: auto;
