--- a/src/scss/_icon.scss
+++ b/src/scss/_icon.scss
@@ -85,7 +85,7 @@ $icon-size: (
         "icon-tip-green060": "icon_tip_green060.svg",
         "round-trip": "icon_round_trip.svg",
         "one-way": "icon_oneway.svg",
-        "dot": "icon_text_dot.svg",
+        "register": "icon_register.svg",
     )
     
 ) !default;
