고객센터 -- 이미지 업데이트

--- a/src/scss/_customer.scss
+++ b/src/scss/_customer.scss
@@ -23,7 +23,7 @@
         h3 {
             margin-bottom: 16px;
             color: $navy-070;
-            @include fontSize(18, 500);
+            @include fontSize(20, 500);
         }
         h4 {
             margin: 24px 0 16px;
@@ -165,10 +165,9 @@
         padding: 16px 0;
         @include flex-center;
         .img {
-            img {
-                width: 56px;
-                height: 56px;
-            }
+            flex: 0 0 auto;
+            width: 56px;
+            height: 56px;
         }
 
         .text {
