--- a/src/scss/_customer.scss
+++ b/src/scss/_customer.scss
@@ -325,7 +325,16 @@
         }
     }
 }
-
+.example-area {
+    em {
+        color: $navy-040;
+        @include fontSize(14);
+    }
+    .img {
+        margin-top: 6px;
+        text-align: center;
+    }
+}
 .gc-select {
     &.full {
         select {
@@ -479,7 +488,7 @@
     gap: 16px 12px;
     margin-top: 16px;
     .btn {
-        width:calc((100% - 36px)/4);
+        width: calc((100% - 36px) / 4);
         flex: 0 0 auto;
         color: $navy-070;
         border-radius: $border-radius-50;
