공통 및 수정사항 반영

--- a/src/components/text.html
+++ b/src/components/text.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
     <head>
+		<title>text</title>
         @@include('@@webRoot/include/head.html')
         <style>
             .contents {
@@ -49,6 +50,37 @@
 
                             <span class="tag">세차완료</span>
                             <span class="tag sale">세차완료</span>
+							
+							<br><br>
+							
+							<div class="badge">test</div>
+							<br>
+							<div class="badge plus">Plus</div>
+							<br>
+							<div class="badge event">이벤트</div>
+							<br>
+							<div class="badge special">특가</div>
+							<br>
+							<div class="badge new-zone">신규존</div>
+							<br>
+							<div class="badge new-car">신차</div>
+							<br>
+							<div class="badge electric-car">전기차</div>
+							<br>
+							<div class="badge free-zone">프리존</div>
+							<br>
+							<div class="badge round">왕복</div>
+							<br>
+							<div class="badge one-way">편도</div>
+							<br>
+							<div class="badge emergency">긴급</div>
+							<br>
+							<div class="badge solid">solid</div>
+							<br>
+							<div class="badge line">line</div>
+							<br>
+							
+							<br><br>
                             <span class="deco-througt">본문내용</span>
                         </div>
 
