--- a/src/components/form.html
+++ b/src/components/form.html
@@ -64,6 +64,16 @@ h2{margin-bottom:20px;font-size:30px}
 						<span>Radio button</span>
 					</label>
 					<br><br>
+					<label for="tmpRadio03" class="gc-radio">
+						<input type="radio" name="tmpRadio02" id="tmpRadio03" checked disabled>
+						<span>Radio checked disabled</span>
+					</label>
+					<br><br>
+					<label for="tmpRadio04" class="gc-radio">
+						<input type="radio" name="tmpRadio02" id="tmpRadio04" disabled>
+						<span>Radio disabled</span>
+					</label>
+					<br><br>
 					<div class="gc-select">
 						<select name="" id="">
 							<option>은행 선택</option>
