--- a/src/scss/_mixin.scss
+++ b/src/scss/_mixin.scss
@@ -94,11 +94,28 @@
 		clip:rect(0,0,0,0);
 		border:0;
 
-		&:checked ~ span{
-			color:$navy-070;
-			font-weight:500;
+		&:checked {
+			& ~ span {
+				color:$navy-070;
+				font-weight:500;
+				&:before {
+					background-color:$default;
+					@if($type =="radio") {
+						box-shadow:inset 0 0 0 2px;
+						color:#fff;
+					}
+				}
+			}
+			&:disabled ~ span {
+				&:before {
+					background-color:$navy-030;
+					color:$navy-020;
+				}
+			}
+		}
+		&:disabled ~ span {
 			&:before {
-				background-color:$default;
+				background-color:$navy-020;
 			}
 		}
 	}
@@ -117,7 +134,6 @@
 				width:$checkradio-size - 4px;
 				height:$checkradio-size - 4px;
 				border:2px solid $navy-020;
-				box-shadow:inset 0 0 0 2px $gray-000;
 			} @else {
 				width:$checkradio-size;
 				height:$checkradio-size;
